--- a/index.html
+++ b/index.html
@@ -200,23 +200,404 @@
 
     <!-- section product starts-->
 
-    <section class="product">
+    <section class="product_container">
 
         <h1 class="heading">Sản phẩm <span>Bán chạy</span></h1>
+
+        <div class="box_container" style="text-align: center;">
+
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-1.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons2">
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-2.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-3.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-4.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-5.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-6.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-7.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">12%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-8.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+
+        </div>
+        
 
     </section>
 
     <!-- section product ends  -->
 
+    <!-- section deal starts -->
+
+    <section class="deal">
+
+        <div class="content">
+
+            <h3 class="title">deal of the day</h3>
+            <p>Lorem ipsum dolor sit amet consectetur,m!</p>
+
+            <div class="count-down">
+                <div class="box">
+                    <h3 id="day">00</h3>
+                    <span>day</span>
+                </div>
+                <div class="box">
+                    <h3 id="hour">00</h3>
+                    <span>hour</span>
+                </div>
+                <div class="box">
+                    <h3 id="minute">00</h3>
+                    <span>minute</span>
+                </div>
+                <div class="box">
+                    <h3 id="second">00</h3>
+                    <span>second</span>
+                </div>
+            </div>
+
+            <!-- <a href="#" class="btn">Check the deal</a> -->
+
+        </div>
+
+    </section>
+
+    <!-- section deal ends -->
+
+    <section class="product_container" style="position: relative;">
 
 
 
+        <div class="box_container deal_product">
+
+            <div class="box" style="background: #fff;">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-1.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons2">
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-share"></a>
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-2.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-3.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+            <div class="box">
+                <span class="discount">33%</span>
+                <div class="icons">
+                    <a href="#" class="fas fa-heart"></a>
+                    <!-- <a href="#" class="fas fa-share"></a> -->
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                </div>
+                <img src="images/product-4.png" alt="">
+                <h3><a href="#">Banana</a></h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <div class="price">100.000 .đ <span>90.000 .đ</span></div>
+            </div>
+
+
+        </div>
+
+    </section>
 
 
 
+    <!-- reivew section starts -->
+
+    <section class="review" id="review">
+
+        <h1 class="heading">Đánh giá từ <span>khách hàng</span></h1>
+
+        <div class="review-box">
+
+            <div class="box">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="images/pic-1.png" alt="">
+                    <div class="user-info">
+                        <h3>Jone deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur quam praesentium obcaecati
+                    repudiandae nisi exercitationem illo ipsam, veritatis culpa voluptatum.</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="images/pic-2.png" alt="">
+                    <div class="user-info">
+                        <h3>Jone deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur quam praesentium obcaecati
+                    repudiandae nisi exercitationem illo ipsam, veritatis culpa voluptatum.</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="images/pic-3.png" alt="">
+                    <div class="user-info">
+                        <h3>Jone deo</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur quam praesentium obcaecati
+                    repudiandae nisi exercitationem illo ipsam, veritatis culpa voluptatum.</p>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- review section ends -->
 
 
+   <!-- footer sction starts -->
 
+   <section class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>locations</h3>
+            <a href="#">india</a>
+            <a href="#">japan</a>
+            <a href="#">usa</a>
+            <a href="#">vietnam</a>
+            <a href="#">kore</a>
+        </div>
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">dishes</a>
+            <a href="#">about</a>
+            <a href="#">menu</a>
+            <a href="#">review</a>
+            <a href="#">order</a>
+        </div>
+
+        <div class="box">
+            <h3>contac info</h3>
+            <a href="#">+123-343-123</a>
+            <a href="#">+123-343-123</a>
+            <a href="#">copyyouttube@gmail.com</a>
+            <a href="#">copyyouttube@gmail.com</a>
+        </div>
+
+        <div class="box">
+            <h3>follow us</h3>
+            <a href="#">facebook</a>
+            <a href="#">instagram</a>
+            <a href="#">linkedin</a>
+            <a href="#">github</a>
+        </div>
+
+    </div>
+
+    <div class="credit">copy right @ 2021 by <span>Internet</span></div>
+
+</section>
+
+<!-- footer section ends -->
 
     <!-- script custom link -->
     <script src="js/script.js"></script>
