update cart page, accout page, address page, billding page,

--- a/product.html
+++ b/product.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- lightSlide.css link -->
     <link rel="stylesheet" href="css/lightSlider.css">
-
+    <!-- boostrap -->
+    <link rel="stylesheet" href="js/bootstrap/bootstrap.min.css">
     <!-- jquery  -->
     <script src="js/jQuery.js"></script>
     <!-- lightslider -->
@@ -40,8 +41,8 @@
             <a href="#" class="logo"><i class="fas fa-utensils"></i>greens.</a>
 
             <nav class="navbar">
-                <a href="#">Trang Chủ</a>
-                <a href="#">Sản Phẩm</a>
+                <a href="index.html">Trang Chủ</a>
+                <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
                 <a href="#">Liên Hệ</a>
                 <a href="#">Adminstaner</a>
@@ -52,12 +53,19 @@
                 <i class="fas fa-bars" id="menu-bars"></i>
                 <i class="fas fa-search" id="search-icon"></i>
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="card.html" class="fas fa-shopping-cart"></a>
                 <a href="#" class="fas fa-user-alt"></a>
             </div>
         </div>
     </header>
     <!-- header ends -->
+
+    <div class="titlePage">
+        <h1>Sản phẩm</h1>
+        <div class="link">
+            <a href="#">Trang chủ</a> - <a href="#">Sản phẩm</a>
+        </div>
+    </div>
 
     <!-- product section start -->
 
@@ -189,7 +197,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-2.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -207,7 +215,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-3.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -225,7 +233,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-4.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -243,7 +251,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-5.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -261,7 +269,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-6.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -279,7 +287,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-7.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -297,7 +305,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-8.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
@@ -315,7 +323,7 @@
                         <!-- <a href="#" class="fas fa-share"></a> -->
                         <a href="#" class="fas fa-shopping-cart"></a>
                     </div>
-                    <img src="images/product-1.png" alt="">
+                    <img src="images/product-9.png" alt="">
                     <h3><a href="#">Banana</a></h3>
                     <div class="stars">
                         <i class="fa fa-star"></i>
