--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- lightSlide.css link -->
     <link rel="stylesheet" href="css/lightSlider.css">
-
+    <!-- boostrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- jquery  -->
     <script src="js/jQuery.js"></script>
     <!-- lightslider -->
@@ -40,8 +41,8 @@
             <a href="#" class="logo"><i class="fas fa-utensils"></i>greens.</a>
 
             <nav class="navbar">
-                <a href="#">Trang Chủ</a>
-                <a href="#">Sản Phẩm</a>
+                <a href="index.html">Trang Chủ</a>
+                <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
                 <a href="#">Liên Hệ</a>
                 <a href="#">Adminstaner</a>
@@ -52,7 +53,7 @@
                 <i class="fas fa-bars" id="menu-bars"></i>
                 <i class="fas fa-search" id="search-icon"></i>
                 <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="card.html" class="fas fa-shopping-cart"></a>
                 <a href="#" class="fas fa-user-alt"></a>
             </div>
         </div>
@@ -352,7 +353,7 @@
             </div>
 
         </div>
-        
+
 
     </section>
 
@@ -550,58 +551,58 @@
     <!-- review section ends -->
 
 
-   <!-- footer sction starts -->
+    <!-- footer sction starts -->
 
-   <section class="footer">
+    <section class="footer">
 
-    <div class="box-container">
+        <div class="box-container">
 
-        <div class="box">
-            <h3>locations</h3>
-            <a href="#">india</a>
-            <a href="#">japan</a>
-            <a href="#">usa</a>
-            <a href="#">vietnam</a>
-            <a href="#">kore</a>
+            <div class="box">
+                <h3>locations</h3>
+                <a href="#">india</a>
+                <a href="#">japan</a>
+                <a href="#">usa</a>
+                <a href="#">vietnam</a>
+                <a href="#">kore</a>
+            </div>
+
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#">home</a>
+                <a href="#">dishes</a>
+                <a href="#">about</a>
+                <a href="#">menu</a>
+                <a href="#">review</a>
+                <a href="#">order</a>
+            </div>
+
+            <div class="box">
+                <h3>contac info</h3>
+                <a href="#">+123-343-123</a>
+                <a href="#">+123-343-123</a>
+                <a href="#">copyyouttube@gmail.com</a>
+                <a href="#">copyyouttube@gmail.com</a>
+            </div>
+
+            <div class="box">
+                <h3>follow us</h3>
+                <a href="#">facebook</a>
+                <a href="#">instagram</a>
+                <a href="#">linkedin</a>
+                <a href="#">github</a>
+            </div>
+
         </div>
 
-        <div class="box">
-            <h3>quick links</h3>
-            <a href="#">home</a>
-            <a href="#">dishes</a>
-            <a href="#">about</a>
-            <a href="#">menu</a>
-            <a href="#">review</a>
-            <a href="#">order</a>
-        </div>
+        <div class="credit">copy right @ 2021 by <span>Internet</span></div>
 
-        <div class="box">
-            <h3>contac info</h3>
-            <a href="#">+123-343-123</a>
-            <a href="#">+123-343-123</a>
-            <a href="#">copyyouttube@gmail.com</a>
-            <a href="#">copyyouttube@gmail.com</a>
-        </div>
+    </section>
 
-        <div class="box">
-            <h3>follow us</h3>
-            <a href="#">facebook</a>
-            <a href="#">instagram</a>
-            <a href="#">linkedin</a>
-            <a href="#">github</a>
-        </div>
-
-    </div>
-
-    <div class="credit">copy right @ 2021 by <span>Internet</span></div>
-
-</section>
-
-<!-- footer section ends -->
+    <!-- footer section ends -->
 
     <!-- script custom link -->
     <script src="js/script.js"></script>
-
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
 
     <script>
 
