--- a/Dashboard.html
+++ b/Dashboard.html
@@ -16,7 +16,7 @@
     <div class="d-flex" id="wrapper">
         <!-- Sidebar -->
         <div class=" _siderbar" id="sidebar-wrapper">
-            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><a href="#"
+            <div class="sidebar-heading text-center py-4 primary-text fs-4 fw-bold text-uppercase border-bottom"><a href="index.html"
                     class="fas fa-user-secret me-2 home" >VGreens</a></div>
             <div class="list-group list-group-flush my-3">
                 <a href="#" class="list-group-item list-group-item-action bg-transparent links second-text active"><i
