--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
                 <a href="#">Liên Hệ</a>
-                <a href="#">Adminstaner</a>
+                <a href="Dashboard.html">administrator</a>
             </nav>
 
             <div class="icons">
