--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <div class="nav" id="navx">
+        <div class="nav" id="navx"> 
             <a href="#" class="logo"><i class="fas fa-utensils"></i>greens.</a>
 
             <nav class="navbar">
@@ -46,7 +46,7 @@
                 <a href="product.html">Sản Phẩm</a>
                 <a href="#">Giới Thiệu</a>
                 <a href="#">Liên Hệ</a>
-                <a href="#">Adminstaner</a>
+                <a href="Dashboard.html">administrator</a>
             </nav>
 
             <div class="icons">
